--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="gradient-background"></div> 
 <div class="vid-bg">
     <video autoplay loop muted plays-inline>
-        <source src="VID_20230329_184716.mp4" type="video/mp4">
+        <source src="video.mp4" type="video/mp4">
     </video>
 </div>
 
@@ -56,16 +56,12 @@
 
     <div class="content">
         <h3>Lorem ipsum dolor sit amet.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, iure assumenda.</p>
-        <a href="project\index.html" class="btn">read more</a>
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, iure assumenda.</p> -->
+        <!-- <a href="project\index.html" class="btn">read more</a> -->
     </div>
     
 
 </section>
-
-<!-- home section ends -->
-
-<!-- courses section starts  -->
 
 <section class="courses" id="courses">
 
@@ -74,7 +70,6 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="" alt="">
             <h3>The Weeknd</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
@@ -83,73 +78,54 @@
         </div>
 
         <div class="box">
-            <img src="image/course-2.svg" alt="">
             <h3>Carti</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-3.svg" alt="">
             <h3>Ariana Grande</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-4.svg" alt="">
             <h3>Baba yaga</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-5.svg" alt="">
             <h3>Kalita</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-6.svg" alt="">
             <h3>JayZ</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-6.svg" alt="">
             <h3>JayZ</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
             <div class="icons">
-                <!-- <a href="#"> <i class="fas fa-book"></i> 5 modules </a>
-                <a href="#"> <i class="fas fa-clock"></i> 6 hours </a> -->
             </div>
         </div>
 
         <div class="box">
-            <img src="image/course-6.svg" alt="">
             <h3>JayZ</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
             <a href="#" class="btn">read more</a>
@@ -172,7 +148,6 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="image/teacher-1.png" alt="">
             <h3>john deo</h3>
             <span>JAzz</span>
             <div class="share">
@@ -184,7 +159,6 @@
         </div>
 
         <div class="box">
-            <img src="image/teacher-2.png" alt="">
             <h3>john deo</h3>
             <span>Hip Hop</span>
             <div class="share">
@@ -196,7 +170,6 @@
         </div>
 
         <div class="box">
-            <img src="image/teacher-3.png" alt="">
             <h3>Nick Mira</h3>
             <span>online teacher</span>
             <div class="share">
@@ -208,7 +181,6 @@
         </div>
 
         <div class="box">
-            <img src="image/teacher-4.png" alt="">
             <h3>Daii</h3>
             <span>Devotional</span>
             <div class="share">
@@ -220,7 +192,6 @@
         </div>
 
         <div class="box">
-            <img src="image/teacher-5.png" alt="">
             <h3>Raha Jimo</h3>
             <span>Indie</span>
             <div class="share">
@@ -232,7 +203,6 @@
         </div>
 
         <div class="box">
-            <img src="image/teacher-6.png" alt="">
             <h3>john deo</h3>
             <span>Classical</span>
             <div class="share">
@@ -243,7 +213,6 @@
             </div>
         </div>
         <div class="box">
-            <img src="image/teacher-6.png" alt="">
             <h3>Jeremy</h3>
             <span>Pop</span>
             <div class="share">
@@ -254,7 +223,6 @@
             </div>
         </div>
         <div class="box">
-            <img src="image/teacher-6.png" alt="">
             <h3>Post Malone</h3>
             <span>Rage music</span>
             <div class="share">
@@ -338,7 +306,6 @@
         <div class="box">
             <div class="image">
                 <i class="fas fa-quote-left"></i>
-                <img src="image/pic-1.png" alt="">
                 <i class="fas fa-quote-right"></i>
             </div>
             <h3>Sunny</h3>
@@ -356,7 +323,6 @@
         <div class="box">
             <div class="image">
                 <i class="fas fa-quote-left"></i>
-                <img src="image/pic-2.png" alt="">
                 <i class="fas fa-quote-right"></i>
             </div>
             <h3>Nipun</h3>
@@ -376,7 +342,6 @@
         <div class="box">
             <div class="image">
                 <i class="fas fa-quote-left"></i>
-                <img src="image/pic-3.png" alt="">
                 <i class="fas fa-quote-right"></i>
             </div>
             <h3>Ujjwal</h3>
@@ -393,127 +358,41 @@
             </div>
         </div>
 
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <img src="image/pic-4.png" alt="">
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Isla</h3>
-            <span>happy student</span>
-            <!-- <p>It is the best site for me.It helps me in my music</p> -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <img src="image/pic-5.png" alt="">
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Nepal Roy</h3>
-            <span>happy student</span>
-            <!-- <p>It is the best site for me.It helps me in my web designing</p> -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <img src="image/pic-6.png" alt="">
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Sai</h3>
-            <span>happy student</span>
-            <!-- <p>It is the best site for me.It helps me in my Science And Technology</p> -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-        </div>
+        
 
     </div>
 
 </section>
-
-<!-- review section ends -->
-
-<!-- contact section starts  -->
-
-<!-- <section class="contact" id="contact">
-
-    <h1 class="heading"> <span>contact us</span> </h1>
-
-    <form action="">
-
-        <input type="text" placeholder="your name" class="box">
-        <input type="email" placeholder="your email" class="box">
-        <input type="number" placeholder="your number" class="box">
-
-        <textarea name="" class="box" placeholder="your message" id="" cols="30" rows="10"></textarea>
-
-        <input type="submit" value="send message" class="btn">
-
-    </form>
-
-</section>
-
-contact section ends -->
-
-<!-- footer section starts  -->
-
-<!-- <section class="footer">
-
-    <div class="share">
-        <a href="https://github.com/sonachoudhury" class="fab fa-github"></a>
-        <a href="https://www.youtube.com/channel/UC4TipROulhnQer4LU5g_IBA" class="fab fa-youtube"></a>
-        <a href="https://codepen.io/sona-choudhury/pens/public" class="fab fa-codepen"></a>
-        <a href="https://in.pinterest.com/sonachoudhury325" class="fab fa-pinterest"></a>
-    </div>
-
-
-</section> -->
-
-<!-- footer section ends -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- custom javascript file link  -->
 <script src="js/script.js"></script>
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-analytics.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"
 
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBLNJsLI1wKYCi52LdAQDj2z-i4grMIeio",
+      authDomain: "fir-frontend-43825.firebaseapp.com",
+      projectId: "fir-frontend-43825",
+      storageBucket: "fir-frontend-43825.appspot.com",
+      messagingSenderId: "251589584321",
+      appId: "1:251589584321:web:2e5d23fda4c4b37f62fb40",
+      measurementId: "G-CFP93EYPH0"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const autho = getAuth(app)
+    firebase.auth()
+    console.log(app.options)
+  </script>
 </body>
 </html>
