login form added

--- a/login.html
+++ b/login.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width==, initial-scale=1.0">
-    <title>Login as buyer</title>
+    <title>Login/Register</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    
+    <div class="form">
+        <form action="#">
+            <label for="">Login</label>
+            <input type="text" placeholder="User-ID...">
+            <input type="text" placeholder="password...">
+            <button onclick="">Submit</button>
+        </form>
+        <form action="#">
+            <label for="">Register</label>
+            <input type="text" placeholder="User-ID...">
+            <input type="text" placeholder="password...">
+            <button onclick="">Submit</button>
+        </form>
+    </div>
+    <script type="module" src="js/firebase.js"></script>
 </body>
 </html>
