--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
     </video>
 </div>
 
-<!-- header section starts  -->
-
 <header class="header">
 
     <a href="#" class="logo"><img src="" alt=""></i>Hymn&HArmony</a>
 
     <form class="searchbar" action="">
-        <input type="text" placeholder ="search anything" name="q" >
+        <input type="text" placeholder ="search anything . . ." name="q" >
         <button type="submit"><img src="search.png" alt="" srcset=""></button>
     </form>
 
@@ -38,29 +36,19 @@
         <a href="#home">Feed</a>
         <a href="#courses">Tracks</a>
         <a href="#teachers">Distribution</a>
-        <a href="#plan">Beat ID</a>
-        <a href="#review">Review</a>
-        <a href="#contact">contact</a>
-
+        <a href="login.html" class="nav-btn"><img src="right-to-bracket-solid.svg" alt=""></a>
     </nav>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
 </header>
 
-<!-- header section ends -->
-
 <!-- home section starts  -->
 
 <section class="home" id="home">
-
     <div class="content">
         <h3>Lorem ipsum dolor sit amet.</h3>
-        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, iure assumenda.</p> -->
-        <!-- <a href="project\index.html" class="btn">read more</a> -->
     </div>
-    
-
 </section>
 
 <section class="courses" id="courses">
@@ -68,7 +56,6 @@
     <h1 class="heading"> <span>Recent Playlists</span> </h1>
 
     <div class="box-container">
-
         <div class="box">
             <h3>The Weeknd</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, ex?</p>
@@ -295,104 +282,8 @@
 
 <!-- plan section ends -->
 
-<!-- review section starts  -->
-
-<section class="review" id="review">
-
-    <h1 class="heading"> <span>Review</span> </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Sunny</h3>
-            <span>Lorem, ipsum.</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Nipun</h3>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ex eos?</span>
-            <!-- <p>It is the best site for me.It helps me in my dancing</p> -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image">
-                <i class="fas fa-quote-left"></i>
-                <i class="fas fa-quote-right"></i>
-            </div>
-            <h3>Ujjwal</h3>
-            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, earum quae!</span>
-            <!-- <p>It is the best site for me.It helps me in my coding</p> -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eaque iusto.</p>
-
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-            </div>
-        </div>
-
-        
-
-    </div>
-
-</section>
-
 <!-- custom javascript file link  -->
 <script src="js/script.js"></script>
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-analytics.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-auth.js"
-
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-  
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBLNJsLI1wKYCi52LdAQDj2z-i4grMIeio",
-      authDomain: "fir-frontend-43825.firebaseapp.com",
-      projectId: "fir-frontend-43825",
-      storageBucket: "fir-frontend-43825.appspot.com",
-      messagingSenderId: "251589584321",
-      appId: "1:251589584321:web:2e5d23fda4c4b37f62fb40",
-      measurementId: "G-CFP93EYPH0"
-    };
-  
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    const autho = getAuth(app)
-    firebase.auth()
-    console.log(app.options)
-  </script>
+<script type="module" src="js/firebase.js"></script>
 </body>
 </html>
