login form redesign

--- a/index.html
+++ b/index.html
@@ -284,6 +284,6 @@
 
 <!-- custom javascript file link  -->
 <script src="js/script.js"></script>
-<script type="module" src="js/firebase.js"></script>
+<script type="module" src="firebase.js"></script>
 </body>
 </html>
