--- a/login.html
+++ b/login.html
@@ -9,19 +9,40 @@
 </head>
 <body>
     <div class="form">
-        <form action="#">
-            <label for="">Login</label>
-            <input type="text" placeholder="User-ID...">
-            <input type="text" placeholder="password...">
-            <button onclick="">Submit</button>
+        <form class="buyer" id="loginBuyer" action="#">
+            <label for="">Login As Buyer</label>
+            <input type="text" placeholder="User-ID / Email">
+            <input type="password" placeholder="Password">
+            <button type="submit" onclick="">Submit</button>
+            <button type="button" class="switch" id="switch" onclick="switchForm()">New to H&H? Sign-up</button>
         </form>
-        <form action="#">
-            <label for="">Register</label>
-            <input type="text" placeholder="User-ID...">
-            <input type="text" placeholder="password...">
-            <button onclick="">Submit</button>
+        <form class="buyer" id="signupBuyer" action="#">
+            <label for="">Register As Buyer</label>
+            <input type="text" placeholder="Name">
+            <input type="date" placeholder="Date">
+            <input type="text" placeholder="User-ID / Email">
+            <input type="password" placeholder="Password">
+            <button type="submit">Submit</button>
+            <button type="button" class="switch" id="switch" onclick="switchForm()">Already have an account? Log-in</button>
+        </form>
+        <form class="seller" id="loginSeller" action="#">
+            <label for="">Login As Seller</label>
+            <input type="text" placeholder="User-ID / Email">
+            <input type="password" placeholder="Password">
+            <button type="submit" onclick="">Submit</button>
+            <button type="button" class="switch" id="switch" onclick="switchForm()">New to H&H? Sign-up</button>
+        </form>
+        <form class="seller" id="signupSeller" action="#">
+            <label for="">Register As Seller</label>
+            <input type="text" placeholder="Name">
+            <input type="date" placeholder="Date">
+            <input type="text" placeholder="User-ID / Email">
+            <input type="password" placeholder="Password">
+            <button type="submit">Submit</button>
+            <button type="button" class="switch" id="switch" onclick="switchForm()">Already have an account? Log-in</button>
         </form>
     </div>
-    <script type="module" src="js/firebase.js"></script>
+    <script type="module" src="firebase.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
